# solana-trenches-trading-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE_CONTEXT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_GUIDE.md  Dockerfile  FEATURES.md  LIGHTNODE_DEPLOYMENT.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  README_TRADING_BOT.md  TELEGRAM_BOT_DOCUMENTATION_SUMMARY.md  WALKTHROUGH.md  check_deleted_messages.py  create_channels.py  deploy-to-vps.sh  docker-compose.yml  docker-run.sh  init-db.sql  main.py  main_tracker.py  pyproject.toml  requirements.txt  verify_telegram_messages.py
.github/: copilot-instructions.md
data/: README.md
docs/: ARCHITECTURE.md  CONVENTIONS.md  COPILOT_TELEGRAM_QUICK_START.md  GRAFANA.md  PLAN_MULTI_CHANNEL.md  README.md  TELEGRAM_BOT_GUIDE.md  USING_THE_GUIDES.md
grafana/dashboards/: trading-bot.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: postgres.yml
src/: accurate_backtester.py  bot.py  cli.py  commercial_bot.py  config.py  constants.py  controller.py  file_server.py  hit_rate_tracker.py  kol_tracker.py  logging_config.py  main_tracker_bot.py  models.py  notification_bot.py  parsers.py  price_history.py  risk_manager.py  signal_database.py  signal_history.py  signal_publisher.py  strategies.py  strategy_simulator.py  subscription_manager.py
tests/: __init__.py  conftest.py  test_accurate_backtester.py  test_bot.py  test_cli.py  test_commercial_features.py  test_config.py  test_constants.py  test_controller.py  test_exceptions.py  test_file_server.py  test_logging_config.py  test_main_tracker_bot.py  test_models.py  test_notification_bot.py  test_parsers.py  test_price_history.py  test_risk_manager.py  test_signal_database.py  test_signal_history.py  test_state.py  test_strategies.py  test_strategy_simulator.py  test_trader.py
token-analysis-bot/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  init-db.sql  main.py  pyproject.toml  requirements.txt
token-analysis-bot/src/: __init__.py  cli.py  config.py  constants.py  models.py  orchestrator.py
token-analysis-bot/src/db/: __init__.py  repository.py  schema.py
token-analysis-bot/src/delivery/: __init__.py  approval.py  formatter.py  telegram_bot.py
token-analysis-bot/src/detectors/: __init__.py  base_chain.py  moltbook.py  orchestrator.py  twitter.py
token-analysis-bot/src/enrichment/: __init__.py  contract_analyzer.py  dev_osint.py  onchain_metrics.py  pipeline.py
token-analysis-bot/src/synthesis/: __init__.py  llm_client.py  prompts.py  scorer.py  synthesizer.py
token-analysis-bot/src/utils/: __init__.py  helpers.py  logging_config.py
token-analysis-bot/tests/: __init__.py  conftest.py  test_formatter.py  test_helpers.py  test_models.py  test_scorer.py
trading_bot/src/: __init__.py  cli.py  config.py  constants.py  exceptions.py  logging_config.py  models.py  py.typed  state.py  trader.py
